feat: add header ✨

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
   <div class="container">
-
+		<header class="header">
+			<img src="./assets/logo.svg" alt="logo">
+			<nav class="navigation">
+				<ul>
+					<li><a href="#">One Studio</a></li>
+					<li><a href="#">Chapters</a></li>
+					<li><a href="#">Eventos</a></li>
+					<li><a href="#">Sobre</a></li>
+				</ul>
+			</nav>
+		</header>
 	</div>
 </body>
 </html>
