feat: add main ✨

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="global.css">
-  <link rel="stylesheet" href="index.css">
-  <title>Chapter-CSS</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="global.css">
+	<link rel="stylesheet" href="index.css">
+	<title>Chapter-CSS</title>
 </head>
+
 <body>
-  <div class="container">
+	<div class="container">
 		<header class="header">
-			<img src="./assets/logo.svg" alt="logo">
+			<img src="./assets/logo.svg" alt="Logo">
 			<nav class="navigation">
 				<ul>
 					<li><a href="#">One Studio</a></li>
@@ -21,6 +23,19 @@
 				</ul>
 			</nav>
 		</header>
+
+		<main class="main">
+			<div class="informations">
+				<h1>WELCOME, VISSE! CHAPTERS</h1>
+				<p text-wrap>Aprenda junto com a comunidade da ONE STUDIO!</p>
+				<div class="buttons">
+					<button>Inscreva-se</button>
+					<button>Saiba mais</button>
+				</div>
+			</div>
+			<img src="./assets/person.svg" alt="Foto">
+		</main>
 	</div>
 </body>
+
 </html>
